Feature - Add admin RDV cancellation
